Update CHANGELOG with #1

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,2 +1,5 @@
+2.0.0 (2015-11-19)
+* [UPDATE] Updated to latest versions of Topshelf and Unity. Thanks to Michael Murillo @zendever. (#1)
+
 0.1.0.0 (2014-12-19)
 * [NEW] Initial release
